# RiichiRoyale

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPAI.md  MANIFEST.in  README.md  __init__.py  mahjongShuffle.py  main.py  pylintrc  requirements.txt  setup.py  soundWrapper.py  test.py  theme.json  tutorial.py
.github/workflows/: build.yml
aicontrollers/: CMakeLists.txt  alphabeticalbot.cpp  alphabeticalbot.h  angrydiscardobot.cpp  angrydiscardobot.h  bolickbot.cpp  bolickbot.h  fasttanyao.cpp  fasttanyao.h  gentlemanbot.cpp  gentlemanbot.h  pythonaiinterface.cpp  pythonaiinterface.h  thricebot.cpp  thricebot.h  totobot.cpp  totobot.h
audio/: soundWrapper.py  testing.py
c_mahjong/: __init__.py  c_mahjong.py  c_pieces.py
cxxtests/: CMakeLists.txt  can_chi.test.cpp  count_pieces.test.cpp  discard_piece.test.cpp  example_test.test.cpp  game_play.test.cpp  meld_pieces.test.cpp  piece_type.test.cpp  remove_pieces.test.cpp  setup.test.cpp  testai.cpp  testai.h
cxxtests/old/: count_pieces.test.cpp  piece_type.test.cpp  remove_pieces.test.cpp
design/: hand_yakus
docs/: MahjongStateGraph.gml  MahjongStateGraph.gv  stateupdates.txt  yaku_data_format.md
include/: CMakeLists.txt  analysis.h  board.h  combinations.h  controllermanager.h  decision.h  decisionfunction.h  enum.h  event.h  gamestate.h  hand.h  handnode.h  hands.h  handtree.h  mahjongai.h  mahjongns.h  manager.h  meld.h  pieces.h  piecetype.h  player.h  playercontroller.h  possiblesets.h  roundstate.h  score.h  settings.h  statefunction.h  statefunctions.h  stateutilities.h  walls.h  winds.h
libmahjong/: __init__.py
libs/: CMakeLists.txt
misc/: hand.h  meld.h  yaku.cpp
riichiroyale/: __init__.py  __main__.py
riichiroyale/audio/: __init__.py  soundmanager.py
riichiroyale/game/: __init__.py  board.py  boardmanager.py  bolickbot.py  call.py  dialogmanager.py  gameevent.py  loadStory.py  match.py  meld.py  player.py  playermanager.py  storagemanager.py  stubbornbot.py  tile.py  tutorialbot.py  wall.py
riichiroyale/menus/: __init__.py  mainmenu.py  menu.py  settings.py
riichiroyale/resources/: theme.json
riichiroyale/resources/audio/music/: attribution.txt
riichiroyale/sprites/: __init__.py  boardrender.py  mahjonghand.py  mahjongpiece.py  tileload.py  tilerender.py
riichiroyale/sprites/elements/: __init__.py  centerinfo.py  discard.py  dora.py  hand.py  meld.py  opponenticons.py  playerhand.py  scorescreen.py
riichiroyale/storyfiles/: boticons.toml  matches.toml  template.txt
riichiroyale/test/: __init__.py  test_boardmanager.py  test_boardrender.py  test_call.py  test_tilerender.py
riichiroyale/tutorial/: __init__.py  boards.py  dialogue.py  tutorial.py
riichiroyale/utils/: __init__.py  imageload.py  settingsmanager.py
riichiroyale/views/: __init__.py  boardview.py  demo.txt  freeplayselect.py  game.py  gamemanager.py  mainmenu.py  menuview.py  settings.py  storymodegame.py  storymodeselect.py  tutorial.py  view.py
src/: CMakeLists.txt  Makefile  controllermanager.cpp  decisionfunction.cpp  event.cpp  gamestate.cpp  hand.cpp  handnode.cpp  hands.cpp  handtree.cpp  handtree2.cpp  manager.cpp  meld.cpp  piecetype.cpp  player.cpp  possiblesets.cpp  python.cpp  riichitree.cpp  statecontroller.cpp  stateutilities.cpp  walls.cpp
src/statefunctions/: chi.cpp  concealedkan.cpp  convertedkan.cpp  discard.cpp  draw.cpp  error.cpp  exhaust.cpp  gameend.cpp  gamestart.cpp  kan.cpp  kandiscard.cpp  playerhand.cpp  pon.cpp  replacement.cpp  riichi.cpp  ron.cpp  roundend.cpp  roundstart.cpp  tsumo.cpp
storyfiles/: demo.txt
test/: __main__.py  lint.py
tools/: CMakeLists.txt
tools/graphHandTree/: CMakeLists.txt  hand.gv  hand.tgf
tools/graphhandtree/: CMakeLists.txt  hand.gv  main.cpp
tools/mahjongShuffle/: CMakeLists.txt  Makefile  hand.gv  main.cpp  mainwindow.cpp  mainwindow.h  pieces.h  stdform.cpp  stdform.h  walls.cpp
tools/mahjongshuffle/: CMakeLists.txt  hand.gv  mainwindow.cpp  mainwindow.h
tools/testingzone/: CMakeLists.txt  main.cpp
